<resources>
    <string name="app_name">Mefynd</string>
    <string name="title_activity_main">Talii Msa</string>
    <string name="menu_settings">Settings</string>
    
    <string name="disable">DISABLED</string>
    <string name="loading">Loading...</string>
    <string name="login">Log in</string>
    <string name="focused">FOCUSED</string>
    <string name="pressed">PRESSED</string>
    <string name="normal">NORMAL</string>
    <string name="topfriends">Top Friends</string>
    <string name="bio">Bio</string>
    <string name="Burcharest">Burcharest</string>
    <string name="VirgilPana">Virgil Pana</string>
    <string name="todo">TODO</string>
    <string name="_23">23</string>
    <string name="Day">Day</string>
    <string name="Week">Week</string>
    <string name="Month">Month</string>
    <string name="Agenda">Agenda</string>

    <style name="AudioFileInfoOverlayText">
        <item name="android:paddingLeft">4px</item>
        <item name="android:paddingBottom">4px</item>
        <item name="android:textColor">#ffffffff</item>
        <item name="android:textSize">12sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <style name="logo_shadow">
        <item name="android:paddingLeft">4px</item>
        <item name="android:paddingBottom">4px</item>
        <item name="android:textColor">#ffffffff</item>
        <item name="android:textSize">12sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">2</item>
        <item name="android:shadowDy">2</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <style name="shadow_dropdow_white">
        <item name="android:shadowColor">#ffffff</item>
        <item name="android:shadowDx">2</item>
        <item name="android:shadowDy">2</item>
        <item name="android:shadowRadius">2</item>
    </style>
    
    <string name="str_img1">Image1</string>
    <string name="str_img2">Image2</string>
    <string name="str_img3">Image3</string>
    <string name="str_img4">Image4</string>
    <string name="str_img5">Image5</string>
    
    <string name="tab_africa">Msa</string>
    <string name="tab_sa">Kenya</string>
    <string name="tab_world">Updates</string>   
    
    <string-array name="category_array">
        <item>News and Updates</item>
        <item>Lost/Found items</item>
       
    </string-array>
    
</resources>
